--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <div class="content-section">
                     <h2>PROFESSIONAL PROFILE</h2>
                     <hr>
-                    <p>Motivated student at the University of North Texas with a strong foundation in <strong>Data Analytics</strong> and <strong>Problem Solving</strong>. Proficient in <strong>Python</strong>, <strong>SQL</strong>, and <strong>Linux</strong> environments. Eager to apply classroom learning to real-world enterprise systems, automation tools, and data pipelines.</p>
+                    <p>Motivated student at the University of North Texas with a strong foundation in <strong>Data Analytics</strong> and <strong>Problem Solving</strong>. Proficient in <strong>Python</strong>, <strong>SQL</strong>, and <strong>Linux</strong> environments. Eager to apply classroom learning to real world enterprise systems, automation tools, and data pipelines.</p>
                 </div>
             </div>
         </div>
